frontend/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: taskflow-frontend
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    name: http
