frontend/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: taskflow-frontend
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
      name: http
