frontend/networkpolicy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-frontend
  namespace: taskflow-frontend
spec:
  podSelector: {} # Applies to all pods 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0 
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 3000
